[tool.poetry]
name = "pykeadhcp"
version = "0.8.0a1"
description = "Wrapper around requests module to query ISC Kea DHCP API Daemons (ctrlagent, dhcp4, dhcp6, ddns)"
authors = ["Brandon Spendlove <brandon-spendlove@hotmail.co.uk>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^7.4.0"
pytest-order = "^1.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
